# gba-sprite-engine

./: CMakeLists.txt
MarioParty/: CMakeLists.txt
MarioParty/src/: Board_scene.cpp  Board_scene.h  Titlescreen_scene.cpp  Titlescreen_scene.h
MarioParty/src/view/titlescreen/: titlescreen.h
annavanheusden/: CMakeLists.txt  README
annavanheusden/img/titlescreen/: titlescreen.c  titlescreen.h
annavanheusden/src/: Board_scene.cpp  Board_scene.h  Player.cpp  Player.h  Titlescreen_scene.cpp  Titlescreen_scene.h  main.cpp
annavanheusden/src/view/board/: board (1).h  board_map.h  board_tiles_pal.c  board_tiles_pal.h
annavanheusden/src/view/player/: Mario.c  Mario.h
annavanheusden/src/view/titlescreen/: titlescreen.h
engine/: CMakeLists.txt
engine/include/libgba-sprite-engine/background/: background.h
